--- a/index.css
+++ b/index.css
@@ -4,15 +4,21 @@
 
 @tailwind utilities;
 
+@layer components {
+  .bg-gradient {
+    @apply bg-gradient-to-t from-primary to-secondary;
+  }
+}
+
 ::-webkit-scrollbar {
-    width: 12px;
+  width: 12px;
 }
- 
+
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);     
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
 }
- 
+
 ::-webkit-scrollbar-thumb {
-    border-radius: 2px;
-    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.5); 
+  border-radius: 2px;
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
 }
